# hypersdk

./: Cargo.toml
hypecli/: Cargo.toml
hypecli/src/: fills.rs  main.rs  orders_list.rs  positions.rs  subscribe.rs  utils.rs
src/hypercore/: http.rs  utils.rs
src/hypercore/types/: api.rs  mod.rs
