[package]
name = "hypecli"
version = "0.1.5"
edition = "2024"
authors = ["Dario <dario@infinitefieldtrading.com>"]
description = "CLI tool for interacting with Hyperliquid via hypersdk"
repository = "https://github.com/infinitefield/hypersdk"
homepage = "https://github.com/infinitefield/hypersdk"
license = "MPL-2.0"
readme = "README.md"
keywords = ["hyperliquid", "cli", "trading", "dex", "perps"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/hypersdk"
rust-version = "1.88.0"
include = [
  "src/**",
  "README.md",
  "LICENSE*",
  "Cargo.toml"
]

[patch.crates-io]
hypersdk = { path = ".." }

[dependencies]
hypersdk = { version = "0.2" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43.1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
anyhow = "1"
tabwriter = "1.4.0"
enum_dispatch = "0.3.13"
iroh = { version = "0.95.1", features = ["discovery-local-network"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
hex = "0.4.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
iroh-tickets = "0.2.0"
alloy = { version = "1.5.2", default-features = false, features = ["signer-keystore", "signer-ledger", "signer-local"] }
derive_more = { version = "2.1.1", features = ["deref"] }
rpassword = "7.4.0"
indicatif = "0.18.3"
bytes = "1.11.0"
rust_decimal = { version = "1.39.0", default-features = false, features = ["std"] }
serde_json = "1"
strsim = "0.11"
# For Alloy (0.8 universe)
rand_08 = { package = "rand", version = "0.8.5" }
# For Iroh (0.9 universe)
rand_09 = { package = "rand", version = "0.9.0" }
